<resources>
    <string name="app_name">Playlist maker</string>
    <string name="title" translatable="false">Playlist maker</string>
    <string name="search" translatable="false">Поиск</string>
    <string name="save" translatable="false">Сохранить</string>
    <string name="media" translatable="false">Медиатека</string>
    <string name="settings" translatable="false">Настройки</string>
    <string name="newPlayList" translatable="false">Новый плейлист</string>
    <string name="name" translatable="false">Название*</string>
    <string name="description" translatable="false">Описание</string>
    <string name="dark_theme" translatable="false">Темная тема</string>
    <string name="share" translatable="false">Поделиться приложением</string>
    <string name="support" translatable="false">Написать в поддержку</string>
    <string name="userAgreement" translatable="false">Пользовательское соглашение</string>
    <string name="url" translatable="false">"https://yandex.ru/legal/practicum_offer/"</string>
    <string name="subject" translatable="false">Сообщение разработчикам и разработчицам приложения Playlist Maker/</string>
    <string name="textToSupport" translatable="false">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="textToShare" translatable="false">https://practicum.yandex.ru/android-developer/?from=catalog</string>
    <string name="mail" translatable="false">fradypoden@yandex.ru</string>
    <string name="refresh" translatable="false">Обновить</string>
    <string name="mediaLibrary" translatable="false">Медиатека</string>
    <string name="mediaLibraryEmpty" translatable="false">Ваша медиатека пуста</string>
    <string name="newPlaylist" translatable="false">Новый плейлист</string>
    <string name="playlistsEmpty" translatable="false">Вы не создали \nни одного плейлиста</string>
    <string name="favoriteTracks" translatable="false">Избранные треки</string>
    <string name="playlists" translatable="false">Плейлисты</string>


    <string name="trackName" translatable="false">Название трека</string>
    <string name="artistName" translatable="false">Имя артиста</string>
    <string name="trackTime" translatable="false">Время трека</string>
    <string name="trackTimeText" translatable="false">Длительность</string>
    <string name="collectionNameText" translatable="false">Альбом</string>
    <string name="releaseDateText" translatable="false">Год</string>
    <string name="primaryGenreNameText" translatable="false">Жанр</string>
    <string name="countryText" translatable="false">Страна</string>
    <string name="time" translatable="false">00:00</string>

    <string name="errorNoResults" translatable="false">Ничего не нашлось</string>
    <string name="errorConnectionProblems" translatable="false">Проблемы со связью \n\n Загрузка не удалась. Проверьте подключение к интернету</string>

    <string name="clearHistory" translatable="false">Очистить историю</string>
    <string name="requestHistory" translatable="false">Вы искали</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>