<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/blue">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/indentation_16"
        android:paddingEnd="0dp"
        android:paddingTop="14dp"
        android:text="@string/title"
        android:textColor="@color/white"
        android:textSize="@dimen/primary_text_size" />

    <Button style="@style/ButtonStyle"
        android:id="@+id/search"
        android:layout_marginTop="@dimen/indentation_28"
        android:text="@string/search"
        app:icon="@drawable/ic_search"/>

    <Button style="@style/ButtonStyle"
        android:id="@+id/media"
        android:text="@string/media"
        app:icon="@drawable/ic_media"/>

    <Button style="@style/ButtonStyle"
        android:id="@+id/settings"
        android:layout_marginBottom="@dimen/indentation_28"
        android:text="@string/settings"
        app:icon="@drawable/ic_settings"/>

</LinearLayout>