<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/artworkUrl100"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginVertical="@dimen/indentation_8"
        android:layout_marginStart="13dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/indentation_8"
        android:layout_marginTop="14dp">

        <TextView
            android:id="@+id/trackName"
            style="@style/text.15ems.1line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="@font/ys_display_regular"
            android:text="@string/trackName"
            android:textColor="?attr/textColor2"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/artistName"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/artistName"
            style="@style/text.15ems.1line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ys_display_regular"
            android:text="@string/artistName"
            android:textColor="?attr/textColor4"
            android:textSize="11sp"
            app:layout_constraintBottom_toTopOf="@id/artistName"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/separator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_separator"
            app:layout_constraintStart_toEndOf="@id/artistName"
            app:layout_constraintTop_toTopOf="@id/artistName"
            app:tint="?attr/drawableTintColor" />

        <TextView
            android:id="@+id/trackTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ys_display_regular"
            android:text="@string/trackTime"
            android:textColor="?attr/textColor4"
            android:textSize="11sp"
            app:layout_constraintStart_toEndOf="@+id/separator"
            app:layout_constraintTop_toTopOf="@+id/separator" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:layout_marginEnd="20dp"
        app:drawableTint="?attr/drawableTintColor"
        app:drawableEndCompat="@drawable/ic_arrow_forward" />


</LinearLayout>