<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/whiteOnBlack">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/backButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="4dp"
            android:paddingEnd="0dp"
            app:contentInsetStartWithNavigation="64dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_arrow_back"
            app:navigationIconTint="?attr/blackOnWhite" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/leftBorder24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/indentation_24" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/rightBorder24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/indentation_24" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/leftBorder16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/indentation_16" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/rightBorder16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/indentation_16" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/textsBarrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="end"
            app:constraint_referenced_tags="trackTimeTag" />

        <ImageView
            android:id="@+id/artworkUrl100"
            android:layout_width="312dp"
            android:layout_height="312dp"
            android:layout_marginTop="26dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/backButton" />

        <TextView
            android:id="@+id/trackName"
            style="@style/text.noCaps.22sp.normal.black.ys_display_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/indentation_24"
            android:ellipsize="end"
            android:maxLines="1"
            android:textStyle="bold"
            android:paddingHorizontal="@dimen/indentation_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/artworkUrl100" />

        <TextView
            android:id="@+id/artistName"
            style="@style/text.noCaps.22sp.normal.black.ys_display_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/indentation_12"
            android:maxEms="20"
            android:maxLines="1"
            android:singleLine="true"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/leftBorder24"
            app:layout_constraintTop_toBottomOf="@id/trackName" />

        <ImageView
            android:id="@+id/queue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="54dp"
            android:src="@drawable/queue"
            app:layout_constraintStart_toStartOf="@id/leftBorder24"
            app:layout_constraintTop_toBottomOf="@+id/artistName" />

        <ImageView
            android:id="@+id/play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:src="@drawable/play"
            app:layout_constraintEnd_toEndOf="@id/rightBorder24"
            app:layout_constraintStart_toStartOf="@id/leftBorder24"
            app:layout_constraintTop_toBottomOf="@+id/artistName" />

        <ImageView
            android:id="@+id/favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="54dp"
            android:src="@drawable/favorite"
            app:layout_constraintEnd_toStartOf="@id/rightBorder24"
            app:layout_constraintTop_toBottomOf="@+id/artistName" />

        <TextView
            android:id="@+id/time"
            style="@style/text.noCaps.22sp.normal.black.ys_display_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/indentation_4"
            android:text="@string/time"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/play" />

        <TextView
            android:id="@+id/trackTimeText"
            style="@style/text.noCaps.13dp.normal.blackOnWhite.ys_display_regular.ic_dark_grey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="9dp"
            android:paddingBottom="@dimen/indentation_8"
            android:text="@string/trackTimeText"
            android:textColor="@color/dark_grey"
            app:layout_constraintStart_toEndOf="@id/leftBorder16"
            app:layout_constraintTag="trackTimeTag"
            app:layout_constraintTop_toBottomOf="@id/time" />

        <TextView
            android:id="@+id/trackTimeMillis"
            style="@style/text.noCaps.13dp.normal.blackOnWhite.ys_display_regular.ic_dark_grey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="9dp"
            android:paddingBottom="@dimen/indentation_8"
            app:layout_constraintEnd_toStartOf="@id/rightBorder16"
            app:layout_constraintTop_toBottomOf="@id/time" />

        <TextView
            android:id="@+id/collectionNameText"
            style="@style/text.noCaps.13dp.normal.blackOnWhite.ys_display_regular.ic_dark_grey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="9dp"
            android:paddingBottom="@dimen/indentation_8"
            android:text="@string/collectionNameText"
            android:textColor="@color/dark_grey"
            app:layout_constraintStart_toEndOf="@id/leftBorder16"
            app:layout_constraintTop_toBottomOf="@id/trackTimeText" />

        <TextView
            android:id="@+id/collectionName"
            style="@style/text.noCaps.13dp.normal.blackOnWhite.ys_display_regular.ic_dark_grey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxEms="15"
            android:maxLines="1"
            android:paddingTop="9dp"
            android:paddingBottom="@dimen/indentation_8"
            android:singleLine="true"
            app:layout_constraintEnd_toStartOf="@id/rightBorder16"
            app:layout_constraintTop_toBottomOf="@id/trackTimeMillis" />

        <TextView
            android:id="@+id/releaseDateText"
            style="@style/text.noCaps.13dp.normal.blackOnWhite.ys_display_regular.ic_dark_grey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="9dp"
            android:paddingBottom="@dimen/indentation_8"
            android:text="@string/releaseDateText"
            android:textColor="@color/dark_grey"
            app:layout_constraintStart_toEndOf="@id/leftBorder16"
            app:layout_constraintTop_toBottomOf="@id/collectionNameText" />

        <TextView
            android:id="@+id/releaseDate"
            style="@style/text.noCaps.13dp.normal.blackOnWhite.ys_display_regular.ic_dark_grey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="9dp"
            android:paddingBottom="@dimen/indentation_8"
            app:layout_constraintEnd_toStartOf="@id/rightBorder16"
            app:layout_constraintTop_toBottomOf="@id/collectionName" />

        <TextView
            android:id="@+id/primaryGenreNameText"
            style="@style/text.noCaps.13dp.normal.blackOnWhite.ys_display_regular.ic_dark_grey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="9dp"
            android:paddingBottom="@dimen/indentation_8"
            android:text="@string/primaryGenreNameText"
            android:textColor="@color/dark_grey"
            app:layout_constraintStart_toEndOf="@id/leftBorder16"
            app:layout_constraintTop_toBottomOf="@id/releaseDateText" />

        <TextView
            android:id="@+id/primaryGenreName"
            style="@style/text.noCaps.13dp.normal.blackOnWhite.ys_display_regular.ic_dark_grey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="9dp"
            android:paddingBottom="@dimen/indentation_8"
            app:layout_constraintEnd_toStartOf="@id/rightBorder16"
            app:layout_constraintTop_toBottomOf="@id/releaseDate" />

        <TextView
            android:id="@+id/countryText"
            style="@style/text.noCaps.13dp.normal.blackOnWhite.ys_display_regular.ic_dark_grey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="9dp"
            android:paddingBottom="@dimen/indentation_8"
            android:text="@string/countryText"
            android:textColor="@color/dark_grey"
            app:layout_constraintStart_toEndOf="@id/leftBorder16"
            app:layout_constraintTop_toBottomOf="@id/primaryGenreNameText" />

        <TextView
            android:id="@+id/country"
            style="@style/text.noCaps.13dp.normal.blackOnWhite.ys_display_regular.ic_dark_grey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="9dp"
            android:paddingBottom="@dimen/indentation_8"
            app:layout_constraintEnd_toStartOf="@id/rightBorder16"
            app:layout_constraintTop_toBottomOf="@id/primaryGenreName" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>